cmake_minimum_required (VERSION 3.0.0)
project (Fluorite)

#-------------------------------------------------------------------------------
# Options
#-------------------------------------------------------------------------------

#-------------------------------------------------------------------------------
# Files
#-------------------------------------------------------------------------------

#-------------------------------------------------------------------------------
# Configure
#-------------------------------------------------------------------------------
#include(external/Lumino.Core/cmake/LNCommon.cmake NO_POLICY_SCOPE)

#-------------------------------------------------------------------------------
# Dependencies
#-------------------------------------------------------------------------------
add_subdirectory(external/Lumino.Core)
#link_libraries(LuminoCore_Static)

add_subdirectory(external/Fluorite)

#-------------------------------------------------------------------------------
# Outputs
#-------------------------------------------------------------------------------



